# ai4se-coding-agent-harness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  config.yaml  pyproject.toml  render.yaml
demo/: run_demo.py  run_live.py  run_webui.py  smoke_provider.py
demo/target_repo/: pyproject.toml
demo/target_repo/src/: app.py
demo/target_repo/tests/: test_auth.py  test_db.py  test_util.py
src/harness/: cli.py  config.py  credentials.py  loop.py  models.py  prompt.py
src/harness/feedback/: __init__.py  feedback_loop.py  validators.py
src/harness/governance/: __init__.py  approver.py  guardrail.py
src/harness/llm/: __init__.py  anthropic_client.py  base.py  deepseek.py  mock.py
src/harness/memory/: __init__.py  memory.py
src/harness/tools/: __init__.py  base.py  dispatcher.py  files.py  runners.py  schema.py  shell.py
src/webui/: server.py
src/webui/static/: app.js  index.html  styles.css
tests/: test_approver.py  test_cli.py  test_config.py  test_credentials.py  test_dispatcher.py  test_feedback_loop.py  test_guardrail.py  test_integration.py  test_loop.py  test_memory.py  test_mock_llm.py  test_models.py  test_provider_clients.py  test_runners_encoding.py  test_tools_schema.py  test_validators.py  test_webui.py
tests/fixtures/: mypy_fail.json  pytest_collection_error.json  pytest_fail.json  pytest_pass.json  ruff_fail.json
