[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "A self-coded Coding Agent Harness (AI4SE final project A)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
  "keyring>=24.0",
  "starlette>=0.37",
  "uvicorn>=0.30",
]
[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "pytest-json-report>=1.5"]
[project.scripts]
harness = "harness.cli:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: requires real LLM key"]
[tool.ruff]
line-length = 100
[tool.mypy]
packages = ["harness"]
